# digital-life

./: .gitignore  .gitleaks.toml  .semgrep.yml  .semgrepignore  AGENTS.md  AGENTS.zh.md  CLAUDE.md  CLAUDE.zh.md  GEMINI.md  LICENSE  README.en.md  README.md  issue-feishu-config-mismatch.md  pyproject.toml  test_feishu_stream.py  test_feishu_streaming.py  test_feishu_streaming_config.py  test_streaming_config.py  test_wiki_tool.py
.claude/rules/: python.md
.gemini/commands/: python.development.toml  python.review.toml  speckit.implement.toml  speckit.specify.toml  speckit.tasks.toml
.githooks/: pre-push
.specify/: extensions.yml  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  gemini.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
application/: __init__.py  architecture_classifier.py  architecture_layers.py  contracts.py  message_workflow.py  runtime_provider.py  use_case_coordinator.py
application/api/: __init__.py  broadcast_routes.py  employee_console_routes.py  system_routes.py
application/checks/: __init__.py  checker.py  contracts.py
application/console/: __init__.py  alerts.py  channel.py  (+9 more)
apps/: README.md
config/: app.example.yaml  default.yaml  event_types.yaml  local.example.yaml  local.yaml.bak  routines.yaml  secrets.example.env  task_types.yaml
domain/: __init__.py
gateway/: __init__.py  instance_supervisor.py  main.py
infrastructure/: __init__.py  ports.py
shared/: README.md
(+352 files in other folders)
