[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "digital-life"
version = "0.1.0"
description = "L4 digital life system launcher"
requires-python = ">=3.11"

dependencies = [
    # HTTP / async IO
    "httpx>=0.27",
    "aiohttp>=3.10",
    "requests>=2.31",
    # Config / data
    "PyYAML>=6.0",
    # Observability
    "prometheus_client>=0.20",
    # Feishu (Lark) ingress
    "lark-oapi>=1.4",
    # WeChat QR code (扫码登录 PNG 生成)
    "qrcode>=7.4",
]

[project.optional-dependencies]
# Capability tier——例：图像识别、语音、量化。非核心运行可装。
capabilities = [
    "numpy>=1.26",
    "opencv-python>=4.9",
    "pillow>=10.0",
    "pyttsx3>=2.90",
    "SpeechRecognition>=3.10",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
digital-life = "interfaces.cli.cli:main"

[tool.setuptools.packages.find]
include = [
    "interfaces*",
    "application*",
    "domain*",
    "infrastructure*",
    "adapters*",
    "tools*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
